--- a/DLUTToolBoxV3/DLUTToolBoxV3.csproj
+++ b/DLUTToolBoxV3/DLUTToolBoxV3.csproj
@@ -33,6 +33,14 @@
     <None Remove="Assets\AppIcons\Charge\Ecard.png" />
     <None Remove="Assets\AppIcons\Charge\Pay.png" />
     <None Remove="Assets\AppIcons\Charge\Refresh.png" />
+    <None Remove="Assets\AppIcons\Exam\CourseEvaluate.png" />
+    <None Remove="Assets\AppIcons\Exam\CourseSelect.png" />
+    <None Remove="Assets\AppIcons\Exam\CourseSelectSwitch.png" />
+    <None Remove="Assets\AppIcons\Exam\ExamArrangement.png" />
+    <None Remove="Assets\AppIcons\Exam\ExamDelay.png" />
+    <None Remove="Assets\AppIcons\Exam\JXGL.png" />
+    <None Remove="Assets\AppIcons\Exam\SchoolCalender.png" />
+    <None Remove="Assets\AppIcons\Exam\Score.png" />
     <None Remove="Assets\AppIcons\NetworkMonitor.png" />
     <None Remove="Assets\AppIcons\Network\Connect.png" />
     <None Remove="Assets\AppIcons\Network\Delete.png" />
@@ -41,6 +49,14 @@
     <None Remove="Assets\AppIcons\Network\Refresh.png" />
     <None Remove="Assets\AppIcons\Network\SelfService.png" />
     <None Remove="Assets\AppIcons\Network\Upgrade.png" />
+    <None Remove="Assets\AppIcons\Study\ClassTimeTable.png" />
+    <None Remove="Assets\AppIcons\Study\CourseSearch.png" />
+    <None Remove="Assets\AppIcons\Study\LeaveSchool.png" />
+    <None Remove="Assets\AppIcons\Study\MyTimeTable.png" />
+    <None Remove="Assets\AppIcons\Study\ProgramCompletion.png" />
+    <None Remove="Assets\AppIcons\Study\PublicNotice.png" />
+    <None Remove="Assets\AppIcons\Study\SpareClassroom.png" />
+    <None Remove="Assets\AppIcons\Study\WeekTimeTable.png" />
     <None Remove="Assets\Author.png" />
     <None Remove="Assets\Charge.png" />
     <None Remove="Assets\Ehall.ico" />
@@ -169,6 +185,10 @@
     <Page Update="ShellPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\AppIcons\Library\" />
+    <Folder Include="Assets\AppIcons\Other\" />
   </ItemGroup>
 
   <!-- 
