--- a/DLUTToolBoxV3/Properties/launchSettings.json
+++ b/DLUTToolBoxV3/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "DLUTToolBoxV3 (Package)": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
+      "nativeDebugging": false
     },
     "DLUTToolBoxV3 (Unpackaged)": {
       "commandName": "Project"
