--- a/DLUTToolBoxV3/DLUTToolBoxV3.csproj
+++ b/DLUTToolBoxV3/DLUTToolBoxV3.csproj
@@ -89,6 +89,8 @@
     <None Remove="Assets\Other.png" />
     <None Remove="Assets\Settings.ico" />
     <None Remove="Assets\Study.png" />
+    <None Remove="Assets\Web\Monitor.html" />
+    <None Remove="BrowserWindow.xaml" />
     <None Remove="ItemTemplates.xaml" />
     <None Remove="NLog.config" />
     <None Remove="Pages\AboutPage.xaml" />
@@ -102,6 +104,7 @@
     <None Remove="Pages\SettingsPage.xaml" />
     <None Remove="Pages\StudyPage.xaml" />
     <None Remove="Pages\SystemPage.xaml" />
+    <None Remove="Pages\WebViewPage.xaml" />
     <None Remove="ShellPage.xaml" />
     <None Remove="Templates.xaml" />
     <None Remove="UserControls\AppButton.xaml" />
@@ -145,6 +148,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Update="Assets\Web\Monitor.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -155,6 +163,12 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+    <Page Update="Pages\WebViewPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="BrowserWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="UserControls\AppGridView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
