--- a/DLUTToolBoxV3/DLUTToolBoxV3.csproj
+++ b/DLUTToolBoxV3/DLUTToolBoxV3.csproj
@@ -221,6 +221,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Win64\" />
+  </ItemGroup>
 
   <!-- 
     Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution 
