Fix logging problem optimize login function

--- a/DLUTToolBoxV3/NLog.config
+++ b/DLUTToolBoxV3/NLog.config
@@ -5,17 +5,16 @@
       internalLogLevel="off"
       throwException ="off">
 
-	<variable name="logDirectory" value="${basedir}/Log/"/>
+	<variable name="logDirectory" value="${specialfolder:folder=MyDocuments}/DLUTToolBoxV3/Log/"/>
 	<!-- the targets to write to -->
 	<targets async="true">
 		<!-- write logs to file  -->
-		<target xsi:type="File" name="allfile" fileName="${logDirectory}/Log-DLUTToolBoxV2-${shortdate}.log"
+		<target xsi:type="File" name="allfile" fileName="${logDirectory}/Log-DLUTToolBoxV3-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}${all-event-properties:separator=|} ${onexception:${newline}EXCEPTION\: ${exception:format=ToString,Properties,Data}}"
 				archiveFileName="${LogHome}/Archive/${shortdate}.txt"
 				concurrentWrites="false"
-                keepFileOpen="true"				
-				maxArchiveFiles="4"
-				archiveEvery="Day"/>
+                keepFileOpen="true"	
+				maxArchiveDays="3"/>
 	</targets>
 
 
