--- a/DLUTToolBoxV3/DLUTToolBoxV3.csproj
+++ b/DLUTToolBoxV3/DLUTToolBoxV3.csproj
@@ -24,7 +24,7 @@
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <AppxBundle>Always</AppxBundle>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-    <AppxBundlePlatforms>x86|x64|arm64</AppxBundlePlatforms>
+    <AppxBundlePlatforms>x64</AppxBundlePlatforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="ItemTemplates.xaml.cs" />
@@ -128,11 +128,11 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230331000" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="NLog" Version="5.1.3" />
-    <PackageReference Include="NLog.Schema" Version="5.1.3" />
+    <PackageReference Include="NLog" Version="5.1.4" />
+    <PackageReference Include="NLog.Schema" Version="5.1.4" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
-    <PackageReference Include="WinUICommunity.Common" Version="4.0.1" />
-    <PackageReference Include="WinUICommunity.SettingsUI" Version="4.0.0" />
+    <PackageReference Include="WinUICommunity.Common" Version="4.0.6" />
+    <PackageReference Include="WinUICommunity.SettingsUI" Version="4.0.5" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
