--- a/DLUTToolBoxV3/DLUTToolBoxV3.csproj
+++ b/DLUTToolBoxV3/DLUTToolBoxV3.csproj
@@ -126,15 +126,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230502000" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240311000" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="NLog" Version="5.1.4" />
-    <PackageReference Include="NLog.Schema" Version="5.1.4" />
+    <PackageReference Include="NLog" Version="5.2.8" />
+    <PackageReference Include="NLog.Schema" Version="5.2.8" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
-    <PackageReference Include="WinUICommunity.Common" Version="4.0.7" />
-    <PackageReference Include="WinUICommunity.SettingsUI" Version="4.0.5" />
+    <PackageReference Include="WinUICommunity.Components" Version="6.5.0" />
+    <PackageReference Include="WinUICommunity.ContextMenuExtensions" Version="6.5.0" />
+    <PackageReference Include="WinUICommunity.Core" Version="6.5.0" />
+    <PackageReference Include="WinUICommunity.LandingPages" Version="6.5.0" />
+    <PackageReference Include="WinUICommunity.Win2D" Version="6.5.0" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
