--- a/DLUTToolBoxV3/DLUTToolBoxV3.csproj
+++ b/DLUTToolBoxV3/DLUTToolBoxV3.csproj
@@ -24,7 +24,7 @@
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <AppxBundle>Always</AppxBundle>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-    <AppxBundlePlatforms>x86|x64|arm64</AppxBundlePlatforms>
+    <AppxBundlePlatforms>x64</AppxBundlePlatforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="ItemTemplates.xaml.cs" />
@@ -126,18 +126,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240311000" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240404000" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NLog" Version="5.2.8" />
     <PackageReference Include="NLog.Schema" Version="5.2.8" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
-    <PackageReference Include="WinUICommunity.Components" Version="6.5.0" />
-    <PackageReference Include="WinUICommunity.ContextMenuExtensions" Version="6.5.0" />
-    <PackageReference Include="WinUICommunity.Core" Version="6.5.0" />
-    <PackageReference Include="WinUICommunity.LandingPages" Version="6.5.0" />
-    <PackageReference Include="WinUICommunity.Win2D" Version="6.5.0" />
+    <PackageReference Include="WinUICommunity.Components" Version="6.7.0" />
+    <PackageReference Include="WinUICommunity.ContextMenuExtensions" Version="6.7.0" />
+    <PackageReference Include="WinUICommunity.Core" Version="6.7.0" />
+    <PackageReference Include="WinUICommunity.LandingPages" Version="6.7.0" />
+    <PackageReference Include="WinUICommunity.Win2D" Version="6.7.0" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
