增加 毕业生档案服务，资源预约，报修系统，体育场馆预约，失物招领 修复 图书借阅，入馆培训 移除 大工慕课

--- a/DLUTToolBoxV3/DLUTToolBoxV3.csproj
+++ b/DLUTToolBoxV3/DLUTToolBoxV3.csproj
@@ -44,6 +44,7 @@
     <None Remove="Assets\AppIcons\Exam\Score.png" />
     <None Remove="Assets\AppIcons\Library\BookLent.png" />
     <None Remove="Assets\AppIcons\Library\LibraryPreEducation.png" />
+    <None Remove="Assets\AppIcons\Library\Res.png" />
     <None Remove="Assets\AppIcons\Library\Resources.png" />
     <None Remove="Assets\AppIcons\Library\SeatReserve.png" />
     <None Remove="Assets\AppIcons\Library\WFCC.png" />
@@ -62,20 +63,25 @@
     <None Remove="Assets\AppIcons\Other\Duter.png" />
     <None Remove="Assets\AppIcons\Other\Mail.png" />
     <None Remove="Assets\AppIcons\Other\Market.png" />
-    <None Remove="Assets\AppIcons\Other\Mooc.png" />
     <None Remove="Assets\AppIcons\Other\NetHelper.png" />
     <None Remove="Assets\AppIcons\Other\Payment.png" />
     <None Remove="Assets\AppIcons\Other\Print.png" />
+    <None Remove="Assets\AppIcons\Other\Repair.png" />
+    <None Remove="Assets\AppIcons\Other\Res.png" />
     <None Remove="Assets\AppIcons\Other\TeenHome.png" />
     <None Remove="Assets\AppIcons\Other\XGXT.png" />
     <None Remove="Assets\AppIcons\Other\YJS.png" />
     <None Remove="Assets\AppIcons\Study\ClassTimeTable.png" />
     <None Remove="Assets\AppIcons\Study\CourseSearch.png" />
+    <None Remove="Assets\AppIcons\Study\event.png" />
+    <None Remove="Assets\AppIcons\Study\kfqtycg.png" />
     <None Remove="Assets\AppIcons\Study\LeaveSchool.png" />
+    <None Remove="Assets\AppIcons\Study\lost.png" />
     <None Remove="Assets\AppIcons\Study\MyTimeTable.png" />
     <None Remove="Assets\AppIcons\Study\ProgramCompletion.png" />
     <None Remove="Assets\AppIcons\Study\PublicNotice.png" />
     <None Remove="Assets\AppIcons\Study\SpareClassroom.png" />
+    <None Remove="Assets\AppIcons\Study\tycg.png" />
     <None Remove="Assets\AppIcons\Study\WeekTimeTable.png" />
     <None Remove="Assets\AppIcons\System\Clear.png" />
     <None Remove="Assets\Author.png" />
